# roundtrip-aeson

./: .gitignore  .travis.yml  ChangeLog  LICENSE  Makefile  README.md  poc.hs  roundtrip-aeson.cabal  shell.nix  stack-2.18.yaml  stack.yaml
lib/Data/Aeson/: RoundTrip.hs  Roundtrip.hs
lib/Data/Aeson/RoundTrip/: Parser.hs  Printer.hs
tests/: demo.hs
