name:                roundtrip-aeson
version:             0.1.0.0
synopsis:            Un-/parse JSON with roundtrip invertible syntax definitions.
description:         Un-/parse JSON with roundtrip invertible syntax definitions.
homepage:            https://github.com/anchor/roundtrip-aeson
license:             BSD3
license-file:        LICENSE
author:              Thomas Sutton
maintainer:          Anchor Engineering <engineering@anchor.net.au>
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:     Data.Aeson.RoundTrip
                     , Data.Aeson.RoundTrip.Parser
                     , Data.Aeson.RoundTrip.Printer
  -- other-modules:       
  build-depends:       base >=4.7 && <4.8
                     , text >=1.2 && <1.3
                     , containers >=0.5 && <0.6
                     , roundtrip
                     , aeson
                     , lens
                     , lens-aeson
                     , bytestring
                     , unordered-containers
                     , vector
                     , scientific
