name:                roundtrip-aeson
version:             0.1.0.0
synopsis:            Un-/parse JSON with roundtrip invertible syntax definitions.
description:         Un-/parse JSON with roundtrip invertible syntax definitions.
homepage:            https://github.com/anchor/roundtrip-aeson
license:             BSD3
license-file:        LICENSE
author:              Thomas Sutton <me@thomas-sutton.id.au>, Christian Marie <christian@ponies.io>
maintainer:          Anchor Engineering <engineering@anchor.net.au>
copyright:           Anchor Systems
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository HEAD
  type: git
  location: https://github.com/anchor/roundtrip-aeson

library
  default-language:    Haskell2010
  hs-source-dirs:      lib
  exposed-modules:     Data.Aeson.RoundTrip
  build-depends:       base >=4.7 && <4.8
                     , aeson
                     , bytestring
                     , containers >=0.5 && <0.6
                     , lens
                     , lens-aeson
                     , roundtrip
                     , scientific
                     , text >=1.2 && <1.3
                     , unordered-containers
                     , vector

test-suite demo
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      tests
  main-is:             demo.hs
  build-depends:       base >=4.7 && <4.8
                     , aeson
                     , bytestring
                     , lens-aeson
                     , roundtrip
                     , roundtrip-aeson
                     , text
                     , vector
